# tdlib

./: pubspec.yaml
android/: build.gradle
data/: README.md
example/lib/: main.dart
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
generator/: generate.dart  main_class.tmpl
lib/: tdlib.dart
lib/src/tdapi/: function.dart  object.dart  tdapi.dart
lib/src/tdapi/functions/: accept_call.dart  accept_terms_of_service.dart  activate_story_stealth_mode.dart  add_bot_media_preview.dart  add_chat_folder_by_invite_link.dart  add_chat_member.dart  add_chat_members.dart  add_chat_to_list.dart  add_contact.dart  add_custom_server_language_pack.dart  add_favorite_sticker.dart  add_file_to_downloads.dart  add_local_message.dart  add_log_message.dart  add_message_reaction.dart  add_network_statistics.dart  add_pending_paid_message_reaction.dart  add_proxy.dart  add_quick_reply_shortcut_inline_query_result_message.dart  add_quick_reply_shortcut_message.dart  add_quick_reply_shortcut_message_album.dart  add_recent_sticker.dart  add_recently_found_chat.dart  add_saved_animation.dart  add_saved_notification_sound.dart  add_sticker_to_set.dart  boost_chat.dart  (+828 more)
lib/src/tdclient/: td_client.dart  td_json_client.dart
tg_desktop/: README.md  pubspec.yaml
tg_desktop/linux/: CMakeLists.txt
tg_desktop/windows/: CMakeLists.txt  tg_desktop_plugin.cpp  tg_desktop_plugin.h  tg_desktop_plugin_c_api.cpp
tg_desktop/windows/include/tg_desktop/: tg_desktop_plugin_c_api.h
(+624 files in other folders)
